<resources>
    <string name="app_name">Torpedo Cafe</string>

    <string name="name">Name: </string>
    <string name="price">Price: </string>
    <string name="stock">Stock: </string>
    <string name="new_stock">New Stock: </string>

    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="dec"> - </string>
    <string name="inc"> + </string>

    <string name="dialog_title">Confirm Order</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="today_sale">Today\'s Sale: </string>

    <string name="password">Password</string>
    <string name="order">Order</string>

    <string name="delete">Delete</string>
</resources>